--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
                  body {
              font-family: 'Poppins', sans-serif;
-             background: linear-gradient(-45deg, #000000, #0a1a2e, #001a33, #002244, #003366, #0a1a2e);
+             background: linear-gradient(-45deg, #000000, #0a1a2e, #001a33, #002244, #003366, #0a1a2e, #1a0044, #0a1a2e);
              background-size: 400% 400%;
-             animation: gradientShift 15s ease infinite;
+             animation: gradientShift 20s ease infinite;
              color: #FFFFFF;
              line-height: 1.6;
              min-height: 100vh;
@@ -26,7 +26,7 @@
              overflow-x: hidden;
          }
 
-        /* Animated gradient overlay for more color */
+        /* Enhanced animated gradient overlay with multiple layers */
         body::before {
             content: '';
             position: fixed;
@@ -34,10 +34,32 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(ellipse at top, rgba(18, 159, 202, 0.15) 0%, transparent 50%),
-                        radial-gradient(ellipse at bottom right, rgba(18, 159, 202, 0.1) 0%, transparent 50%);
+            background: 
+                radial-gradient(ellipse at 20% 20%, rgba(18, 159, 202, 0.2) 0%, transparent 40%),
+                radial-gradient(ellipse at 80% 80%, rgba(138, 43, 226, 0.15) 0%, transparent 40%),
+                radial-gradient(ellipse at 50% 50%, rgba(18, 159, 202, 0.1) 0%, transparent 60%),
+                radial-gradient(ellipse at bottom right, rgba(18, 159, 202, 0.12) 0%, transparent 50%);
             pointer-events: none;
             z-index: 0;
+            animation: gradientOverlay 25s ease infinite;
+        }
+
+        /* Grid pattern overlay for tech aesthetic */
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: 
+                linear-gradient(rgba(18, 159, 202, 0.03) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(18, 159, 202, 0.03) 1px, transparent 1px);
+            background-size: 80px 80px;
+            pointer-events: none;
+            z-index: 0;
+            opacity: 0.6;
+            animation: gridShift 20s linear infinite;
         }
 
         @keyframes gradientShift {
@@ -49,6 +71,97 @@
             }
             100% {
                 background-position: 0% 50%;
+            }
+        }
+
+        @keyframes gradientOverlay {
+            0%, 100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+            50% {
+                opacity: 0.8;
+                transform: scale(1.1);
+            }
+        }
+
+        @keyframes gridShift {
+            0% {
+                transform: translate(0, 0);
+            }
+            100% {
+                transform: translate(80px, 80px);
+            }
+        }
+
+        /* Animated floating orbs/particles background */
+        .background-orbs {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        .orb {
+            position: absolute;
+            border-radius: 50%;
+            filter: blur(60px);
+            opacity: 0.3;
+            animation: float 20s ease-in-out infinite;
+        }
+
+        .orb-1 {
+            width: 400px;
+            height: 400px;
+            background: radial-gradient(circle, rgba(18, 159, 202, 0.4), transparent);
+            top: 10%;
+            left: 10%;
+            animation-delay: 0s;
+        }
+
+        .orb-2 {
+            width: 350px;
+            height: 350px;
+            background: radial-gradient(circle, rgba(138, 43, 226, 0.3), transparent);
+            top: 60%;
+            right: 15%;
+            animation-delay: -5s;
+        }
+
+        .orb-3 {
+            width: 300px;
+            height: 300px;
+            background: radial-gradient(circle, rgba(18, 159, 202, 0.35), transparent);
+            bottom: 20%;
+            left: 50%;
+            animation-delay: -10s;
+        }
+
+        .orb-4 {
+            width: 450px;
+            height: 450px;
+            background: radial-gradient(circle, rgba(138, 43, 226, 0.25), transparent);
+            top: 50%;
+            left: 70%;
+            animation-delay: -15s;
+        }
+
+        @keyframes float {
+            0%, 100% {
+                transform: translate(0, 0) scale(1);
+            }
+            25% {
+                transform: translate(50px, -50px) scale(1.1);
+            }
+            50% {
+                transform: translate(-30px, -100px) scale(0.9);
+            }
+            75% {
+                transform: translate(80px, -30px) scale(1.05);
             }
         }
 
@@ -1761,6 +1874,14 @@
     </style>
  </head>
  <body>
+     <!-- Animated Background Orbs -->
+     <div class="background-orbs">
+         <div class="orb orb-1"></div>
+         <div class="orb orb-2"></div>
+         <div class="orb orb-3"></div>
+         <div class="orb orb-4"></div>
+     </div>
+
            <!-- Navigation Header -->
       <nav class="navbar" id="navbar">
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                <a href="#home" class="nav-logo">
