Add mobile optimizations and update README for website viewers

--- a/index.html
+++ b/index.html
@@ -1679,6 +1679,51 @@
 
                    /* Responsive */
          @media (max-width: 768px) {
+             /* Mobile Background Optimizations */
+             body::before {
+                 background: 
+                     radial-gradient(ellipse at 20% 20%, rgba(18, 159, 202, 0.15) 0%, transparent 50%),
+                     radial-gradient(ellipse at 80% 80%, rgba(138, 43, 226, 0.1) 0%, transparent 50%);
+             }
+
+             body::after {
+                 background-size: 60px 60px;
+                 opacity: 0.4;
+             }
+
+             .orb {
+                 filter: blur(40px);
+                 opacity: 0.25;
+             }
+
+             .orb-1 {
+                 width: 250px;
+                 height: 250px;
+                 top: 5%;
+                 left: 5%;
+             }
+
+             .orb-2 {
+                 width: 200px;
+                 height: 200px;
+                 top: 70%;
+                 right: 10%;
+             }
+
+             .orb-3 {
+                 width: 180px;
+                 height: 180px;
+                 bottom: 10%;
+                 left: 40%;
+             }
+
+             .orb-4 {
+                 width: 220px;
+                 height: 220px;
+                 top: 40%;
+                 left: 60%;
+             }
+
              .node-network {
                  width: 300px;
                  height: 300px;
