--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@
             position: relative;
         }
 
+        /* Hide mobile menu buttons on desktop */
+        .nav-links .mobile-menu-btn {
+            display: none;
+        }
+
         .nav-links a::after {
             content: '';
             position: absolute;
@@ -289,21 +294,36 @@
         /* Responsive Nav */
         @media (max-width: 768px) {
             .navbar {
-                padding: 15px 20px;
+                padding: 10px 20px;
+                grid-template-columns: auto 1fr auto;
+                align-items: center;
             }
 
-                         .nav-links {
-                 display: none;
-                 position: absolute;
-                 top: 100%;
-                 left: 0;
-                 right: 0;
-                 background: rgba(0, 0, 0, 0.7);
-                 backdrop-filter: blur(15px);
-                 flex-direction: column;
-                 padding: 20px;
-                 border-bottom: 1px solid rgba(18, 159, 202, 0.2);
-             }
+            .mobile-menu-toggle {
+                display: block;
+                grid-column: 3;
+                justify-self: end;
+                align-self: center;
+                margin-top: -8px;
+            }
+
+            .nav-logo {
+                grid-column: 1;
+            }
+
+            .nav-links {
+                grid-column: 1 / -1;
+                display: none;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                right: 0;
+                background: rgba(0, 0, 0, 0.7);
+                backdrop-filter: blur(15px);
+                flex-direction: column;
+                padding: 20px;
+                border-bottom: 1px solid rgba(18, 159, 202, 0.2);
+            }
 
             .nav-links.active {
                 display: flex;
@@ -314,14 +334,32 @@
             }
 
             .nav-buttons {
-                flex-direction: column;
-                width: 100%;
-                gap: 10px;
+                display: none;
             }
 
-            .nav-btn {
-                width: 100%;
-                text-align: center;
+            /* Add buttons to mobile menu */
+            .nav-links .mobile-menu-btn {
+                display: block;
+                color: #129fca;
+                font-weight: 600;
+                font-size: 16px;
+                padding: 8px 0;
+                border-bottom: 1px solid rgba(18, 159, 202, 0.2);
+                margin-bottom: 4px;
+            }
+
+            .nav-links .mobile-menu-btn:first-child {
+                border-top: 1px solid rgba(18, 159, 202, 0.2);
+                padding-top: 12px;
+            }
+
+            .nav-links .mobile-menu-btn:hover {
+                color: #129fca;
+                opacity: 0.8;
+            }
+
+            .nav-links .mobile-menu-btn::after {
+                display: none;
             }
         }
 
@@ -736,6 +774,7 @@
          .about-content {
              flex: 1;
              min-width: 300px;
+             text-align: center;
          }
 
          .about-title {
@@ -744,6 +783,7 @@
              color: #FFFFFF;
              margin-bottom: 20px;
              line-height: 1.2;
+             text-align: center;
          }
 
          .about-text {
@@ -751,6 +791,12 @@
              color: #FFFFFF;
              line-height: 1.7;
              margin-bottom: 30px;
+             text-align: center;
+         }
+
+         .about-content .btn {
+             margin: 0 auto;
+             display: inline-block;
          }
 
         .about-text .highlight {
@@ -1724,24 +1770,167 @@
                  left: 60%;
              }
 
-             .node-network {
-                 width: 300px;
-                 height: 300px;
-             }
+            .node-network {
+                width: 500px;
+                height: 500px;
+            }
 
-             .node-network svg {
-                 width: 300px;
-                 height: 300px;
-             }
+            .node-network svg {
+                width: 500px !important;
+                height: 500px !important;
+            }
 
-             .node {
-                 width: 45px;
-                 height: 45px;
-             }
+            .connection-lines {
+                width: 500px !important;
+                height: 500px !important;
+                transform: scale(0.625);
+                transform-origin: 0 0;
+            }
 
-             .node-center {
-                 width: 60px;
-                 height: 60px;
+            .node {
+                width: 28px;
+                height: 28px;
+            }
+
+            .node::after {
+                width: 10px;
+                height: 10px;
+            }
+
+            .node-center {
+                width: 35px;
+                height: 35px;
+            }
+
+            /* Position nodes exactly on line endpoints for mobile */
+            /* Center node at (400, 400) in 800px = 50%, 50% */
+            .node-center {
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* Top center at (400, 20) = 50%, 2.5% */
+            .node-1 {
+                top: 2.5%;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            /* Top left at (120, 200) = 15%, 25% */
+            .node-2 {
+                top: 25%;
+                left: 15%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* Top right at (680, 200) = 85%, 25% */
+            .node-3 {
+                top: 25%;
+                left: 85%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* Bottom left at (120, 600) = 15%, 75% */
+            .node-4 {
+                top: 75%;
+                left: 15%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* Bottom right at (680, 600) = 85%, 75% */
+            .node-5 {
+                top: 75%;
+                left: 85%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* Bottom center at (400, 780) = 50%, 97.5% */
+            .node-6 {
+                top: 97.5%;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            /* At (200, 120) = 25%, 15% */
+            .node-7 {
+                top: 15%;
+                left: 25%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* At (600, 120) = 75%, 15% */
+            .node-8 {
+                top: 15%;
+                left: 75%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* At (120, 320) = 15%, 40% */
+            .node-9 {
+                top: 40%;
+                left: 15%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* At (680, 320) = 85%, 40% */
+            .node-10 {
+                top: 40%;
+                left: 85%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* At (200, 600) = 25%, 75% */
+            .node-11 {
+                top: 75%;
+                left: 25%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* At (600, 600) = 75%, 75% */
+            .node-12 {
+                top: 75%;
+                left: 75%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* At (280, 680) = 35%, 85% */
+            .node-13 {
+                top: 85%;
+                left: 35%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* At (520, 680) = 65%, 85% */
+            .node-14 {
+                top: 85%;
+                left: 65%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* At (400, 480) = 50%, 60% */
+            .node-15 {
+                top: 60%;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            /* At (240, 400) = 30%, 50% */
+            .node-16 {
+                top: 50%;
+                left: 30%;
+                transform: translate(-50%, -50%);
+            }
+
+            /* At (560, 400) = 70%, 50% */
+            .node-17 {
+                top: 50%;
+                left: 70%;
+                transform: translate(-50%, -50%);
+            }
+
+             .hero-section {
+                 padding: 120px 20px 80px;
              }
 
              .hero-title {
@@ -1798,26 +1987,88 @@
                  }
 
                  .terminal-container {
-                     max-width: 100%;
-                     margin: 0 10px;
+                     max-width: 320px;
+                     margin: 0 auto;
+                     border-radius: 40px;
+                     overflow: hidden;
+                     position: relative;
+                     background: #000;
+                     border: 8px solid #1a1a1a;
+                     box-shadow: 0 0 0 2px rgba(18, 159, 202, 0.3),
+                                 0 20px 60px rgba(0, 0, 0, 0.8);
+                 }
+
+                 /* iPhone notch */
+                 .terminal-container::before {
+                     content: '';
+                     position: absolute;
+                     top: 0;
+                     left: 50%;
+                     transform: translateX(-50%);
+                     width: 150px;
+                     height: 25px;
+                     background: #000;
+                     border-radius: 0 0 20px 20px;
+                     z-index: 10;
+                 }
+
+                 /* iPhone home indicator */
+                 .terminal-container::after {
+                     content: '';
+                     position: absolute;
+                     bottom: 8px;
+                     left: 50%;
+                     transform: translateX(-50%);
+                     width: 134px;
+                     height: 5px;
+                     background: rgba(255, 255, 255, 0.3);
+                     border-radius: 3px;
+                     z-index: 10;
+                 }
+
+                 .terminal-header {
+                     display: none;
                  }
 
                  .terminal-content {
-                     padding: 40px 20px 40px 60px;
-                     min-height: 350px;
+                     padding: 50px 20px 60px;
+                     min-height: 500px;
+                     background: #000;
                  }
 
                  .terminal-nav {
-                     width: 40px;
-                     height: 40px;
+                     width: 36px;
+                     height: 36px;
+                     background: rgba(18, 159, 202, 0.2);
+                     border-radius: 50%;
+                     border: 2px solid rgba(18, 159, 202, 0.5);
+                     display: flex;
+                     align-items: center;
+                     justify-content: center;
+                     z-index: 5;
+                 }
+
+                 .terminal-nav svg {
+                     width: 20px;
+                     height: 20px;
+                     stroke: #129fca;
                  }
 
                  .terminal-nav.prev {
-                     left: 10px;
+                     left: 15px;
                  }
 
                  .terminal-nav.next {
-                     right: 10px;
+                     right: 15px;
+                 }
+
+                 .terminal-nav:hover {
+                     background: rgba(18, 159, 202, 0.3);
+                     border-color: #129fca;
+                 }
+
+                 .terminal-indicators {
+                     display: none;
                  }
 
                  .use-case-terminal-icon {
@@ -1934,14 +2185,16 @@
                  </a>
          <button class="mobile-menu-toggle" id="mobileMenuToggle">☰</button>
                                        <ul class="nav-links" id="navLinks">
-               <li><a href="#home">Home</a></li>
-               <li><a href="#about">About</a></li>
-               <li><a href="#features">Features</a></li>
-               <li><a href="#use-cases">Use Cases</a></li>
-               <li><a href="#team">Team</a></li>
-               <li><a href="#faq">FAQ</a></li>
-               <li><a href="#social">Social</a></li>
-           </ul>
+              <li><a href="https://nonkyc.io/market/XEQ_BTC" class="mobile-menu-btn" target="_blank">Buy $XEQ</a></li>
+              <li><a href="https://equilibria-network.gitbook.io/docs/" class="mobile-menu-btn" target="_blank">Docs</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#use-cases">Use Cases</a></li>
+              <li><a href="#team">Team</a></li>
+              <li><a href="#faq">FAQ</a></li>
+              <li><a href="#social">Social</a></li>
+          </ul>
          <div class="nav-buttons">
              <a href="https://nonkyc.io/market/XEQ_BTC" class="nav-btn nav-btn-primary" target="_blank">Buy $XEQ</a>
              <a href="https://equilibria-network.gitbook.io/docs/" class="nav-btn nav-btn-outline" target="_blank">Docs</a>
