Refine hero subtitle for investor impact

--- a/index.html
+++ b/index.html
@@ -2260,7 +2260,7 @@
              </div>
          </div>
         <h1 class="hero-title">The World's First Privacy Developer Platform</h1>
-        <p class="hero-subtitle">Build privacy-first decentralized applications on Equilibria's secure blockchain. Stake $XEQ, validate transactions, and shape the future of private crypto.</p>
+        <p class="hero-subtitle">Back the privacy infrastructure every builder will need. Stake $XEQ to secure Equilibria's confidential dApps and participate in the upside.</p>
                  <div class="hero-buttons">
              <a href="#" class="btn btn-primary">Join Testnet</a>
          </div>
