Add subtle drop shadow and glow to hero title and feature card headers for improved readability

--- a/index.html
+++ b/index.html
@@ -1157,6 +1157,7 @@
             z-index: 2;
             font-family: 'Poppins', sans-serif;
             text-align: center;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3), 0 0 8px rgba(18, 159, 202, 0.15);
         }
 
         .hero-subtitle {
@@ -2059,6 +2060,7 @@
             margin-left: auto;
             margin-right: auto;
             white-space: nowrap;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3), 0 0 8px rgba(18, 159, 202, 0.15);
         }
 
 
